Added md to html conversion

--- a/templates/section.html
+++ b/templates/section.html
@@ -1,6 +1,6 @@
-<h2>{{title}}</h2>
-<p>{{body}}</p>
-<div class="media-block">
-    <img src="{{media}}"/>
+<h2 class="section-title">{{title}}</h2>
+<div class="section-body">{{{body}}}</div>
+<div class="section-media-block media">
+    <img class="media-image" src="{{media}}"/>
     <span class="media-caption">{{media-caption}}</span>
 </div>
