Added asset download and link insertion

--- a/src/templates/section.html
+++ b/src/templates/section.html
@@ -1,6 +1,6 @@
 <h2 class="section-title">{{title}}</h2>
 <div class="section-body">{{{body}}}</div>
 <div class="section-media-block media">
-    <img class="media-image" src="{{media}}"/>
-    <span class="media-caption">{{media-caption}}</span>
+    <img class="media-image" src="{{media}} alt={{mediaDescription}}"/>
+    <span class="media-caption">{{mediaCaption}}</span>
 </div>
