Updated to match the design and data-model

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        {{{inlineCss}}}
-    </style>
-</head>
-<body>
-{{{content}}}
-</body>
-</html>
+<main class="main">
+    {{{title}}
+    {{{sections}}
+</main>
