--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,9 +1,52 @@
-body {
-    background-color: black;
-    color: white;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import './definitions.less';
 
-    div {
-        background-color: white;
-        color: black;
+
+body {
+    z-index: 0;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    opacity: 1;
+    line-height: 1.4em;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+h1, h2, h3 {
+    font-family: "Open Sans", Arial, sans-serif;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
+p {
+    margin-bottom: 10px;
+
+    a {
+        color: #555;
+        text-decoration: underline dotted;
+
+        &:hover {
+            text-decoration: none;
+        }
     }
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px transparent;
+
+    &:hover {
+        text-decoration: underline;
+        border-bottom: 1px transparent !important;
+    }
+}
+
+
+@import './header.less';
+@import './sections.less';
+@import './footer.less';
