--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,6 +1,41 @@
 <header class="header">
     <div class="header--logo-wrapper">
-        <img class="header--logo" alt="Välkommen till Värmdö - logotyp" src="/img/VTVlogo_vertical_grey.svg"/>
+        <svg class="header--logo" data-name="Lager 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576.51 219.66">
+            <defs>
+                <style>.g-cls-1{fill:#463ca0;}.g-cls-2,.g-cls-3{fill:#ededed;}.g-cls-3{font-size:57.07px;font-family:OpenSans-Bold, "Open Sans";font-weight:700;}.g-cls-4{letter-spacing:-0.03em;}.g-cls-5{letter-spacing:-0.02em;}.g-cls-6{letter-spacing:-0.02em;}.g-cls-7{letter-spacing:-0.04em;}.g-cls-8{letter-spacing:-0.02em;}.g-cls-9{letter-spacing:-0.02em;}.g-cls-10{letter-spacing:-0.02em;}.g-cls-11{letter-spacing:-0.01em;}.g-cls-12{letter-spacing:-0.02em;}.g-cls-13{letter-spacing:-0.02em;}.g-cls-14{letter-spacing:-0.02em;}.g-cls-15{letter-spacing:-0.14em;}.g-cls-16{letter-spacing:-0.02em;}.g-cls-17{letter-spacing:-0.02em;}.g-cls-18{letter-spacing:-0.01em;}.g-cls-19{letter-spacing:-0.02em;}
+                </style>
+            </defs>
+            <title>VTVlogo_vertical_grey</title>
+            <rect class="g-cls-1" width="576.51" height="219.66"/>
+            <path class="g-cls-2"
+                  d="M507.54,462.57h-.12a14.35,14.35,0,0,1-10.18-4.2h0c-3.37-3.36-40.6-43.18-49.33-53.77a9.45,9.45,0,0,1,14.59-12c7.22,8.76,35.51,39.13,45,49.17,9.49-10,37.77-40.41,45-49.17a9.45,9.45,0,0,1,14.59,12c-8.74,10.6-46,50.41-49.33,53.77h0A14.35,14.35,0,0,1,507.54,462.57Zm-.64,0h0Zm0,0h0Z"
+                  transform="translate(-394.74 -274.17)"/>
+            <path class="g-cls-2"
+                  d="M572.62,379.61a9.46,9.46,0,0,1-9.14-11.89,33.58,33.58,0,0,0-1.72-22.63A28.92,28.92,0,0,0,549,331.66c-11.52-6-26.36-4.76-35.29,3a9.43,9.43,0,0,1-6.2,2.31h-.08a9.43,9.43,0,0,1-6.2-2.31c-8.93-7.75-23.77-9-35.3-3A28.92,28.92,0,0,0,453.2,345.1a33.58,33.58,0,0,0-1.72,22.63,9.45,9.45,0,1,1-18.27,4.86A52.3,52.3,0,0,1,436,337.32,48.18,48.18,0,0,1,457.2,314.9c16-8.38,35.7-7.76,50.29,1,14.58-8.77,34.24-9.38,50.28-1A48.19,48.19,0,0,1,579,337.32a52.3,52.3,0,0,1,2.76,35.27A9.46,9.46,0,0,1,572.62,379.61ZM514,334.37l0,0Zm0,0h0Zm0,0h0Z"
+                  transform="translate(-394.74 -274.17)"/>
+            <text class="g-cls-3" transform="translate(227.5 100.45) scale(0.88 1)">
+                <tspan class="g-cls-4">V</tspan>
+                <tspan class="g-cls-5" x="35.19" y="0">ä</tspan>
+                <tspan class="g-cls-6" x="68.56" y="0">l</tspan>
+                <tspan class="g-cls-7" x="84.82" y="0">k</tspan>
+                <tspan class="g-cls-8" x="118.1" y="0">o</tspan>
+                <tspan class="g-cls-9" x="152.53" y="0">m</tspan>
+                <tspan class="g-cls-10" x="207.49" y="0">m</tspan>
+                <tspan class="g-cls-11" x="262.65" y="0">e</tspan>
+                <tspan x="295.77" y="0">n</tspan>
+                <tspan class="g-cls-12" x="0" y="57.07">t</tspan>
+                <tspan class="g-cls-13" x="23.76" y="57.07">i</tspan>
+                <tspan class="g-cls-14" x="40.05" y="57.07">l</tspan>
+                <tspan x="56.32" y="57.07">l</tspan>
+                <tspan class="g-cls-15" x="73.74" y="57.07"></tspan>
+                <tspan class="g-cls-4" x="80.58" y="57.07">V</tspan>
+                <tspan class="g-cls-16" x="115.76" y="57.07">ä</tspan>
+                <tspan class="g-cls-17" x="149.12" y="57.07">r</tspan>
+                <tspan class="g-cls-18" x="174.04" y="57.07">m</tspan>
+                <tspan class="g-cls-19" x="229.39" y="57.07">d</tspan>
+                <tspan x="264.64" y="57.07">ö</tspan>
+            </text>
+        </svg>
     </div>
     {{{menuLanguage}}}
     {{{menuMain}}}
