--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -1,5 +1,6 @@
 <head>
-    <meta charset="utf8"/>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <style type="text/css">
         {{{inlineCss}}}
     </style>
